Revert "fix button hover not working properly on safari"
This reverts commit 03f96ba2e547f4140a72c1afd689344a552f66e4.

--- a/main_page_style.css
+++ b/main_page_style.css
@@ -4,10 +4,6 @@ html {
   font-size: 30px;
 }
 
-button {
-  cursor: pointer;
-}
-
 a {
   text-decoration: none;
   color: black;
